--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                     <div class="alime-projects-menu">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">All</button>
-                            <button class="btn" data-filter=".human">Human</button>
+                            <button class="btn" data-filter=".human">Still life</button>
                             <button class="btn" data-filter=".nature">Nature</button>
-                            <button class="btn" data-filter=".country">Country</button>
-                            <button class="btn" data-filter=".video">Art</button>
+                            <button class="btn" data-filter=".country">People</button>
+                            <button class="btn" data-filter=".video">Other</button>
                         </div>
                     </div>
                 </div>
