--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <!-- Classy Menu -->
-                    <nav class="classy-navbar justify-content-between" id="alimeNav">
+                    <nav class="classy-navbar justify-content-between" id="MadisonNav">
 
                         <!-- Logo -->
                         <a class="nav-brand" href="./index.html"><img src="" alt=""></a>
@@ -131,30 +131,30 @@
     <!-- Welcome Area End -->
 
     <!-- Gallery Area Start -->
-    <div class="alime-portfolio-area section-padding-80 clearfix">
+    <div class="Madison-portfolio-area section-padding-80 clearfix">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <!-- Projects Menu -->
-                    <div class="alime-projects-menu">
+                    <div class="Madison-projects-menu">
                         <div class="portfolio-menu text-center">
-                            <button class="btn active" data-filter="*">All</button>
-                            <button class="btn" data-filter=".human">Still life</button>
-                            <button class="btn" data-filter=".nature">Nature</button>
-                            <button class="btn" data-filter=".country">People</button>
-                            <button class="btn" data-filter=".video">Other</button>
+                            <button class="btn active" data-filter="*">1</button>
+                            <button class="btn" data-filter=".human">2</button>
+                            <button class="btn" data-filter=".nature">3</button>
+                            <button class="btn" data-filter=".country">4</button>
+                            <button class="btn" data-filter=".video">5</button>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="row alime-portfolio">
+            <div class="row Madison-portfolio">
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/3.jpg" alt="">
+                        <img src="img/bg-img/15.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/3.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/15.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -162,9 +162,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/4.jpg" alt="">
+                        <img src="img/bg-img/23.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/4.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/23.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -172,9 +172,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/5.jpg" alt="">
+                        <img src="img/bg-img/19.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/19.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -182,9 +182,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/6.jpg" alt="">
+                        <img src="img/bg-img/2.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/6.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/2.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -192,9 +192,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/7.jpg" alt="">
+                        <img src="img/bg-img/17.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/7.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/17.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -202,25 +202,15 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/8.jpg" alt="">
+                        <img src="img/bg-img/1.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/8.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/1.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/10.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/10.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
                     <div class="single-portfolio-content">
                         <img src="img/bg-img/9.jpg" alt="">
                         <div class="hover-content">
@@ -230,11 +220,21 @@
                 </div>
 
                 <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/12.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/12.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-6 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/36.jpg" alt="">
+                        <img src="img/bg-img/22.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/36.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/22.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -242,9 +242,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/37.jpg" alt="">
+                        <img src="img/bg-img/25.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/37.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/25.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -252,9 +252,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/5.jpg" alt="">
+                        <img src="img/bg-img/3.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/3.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -348,7 +348,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- Bootstrap -->
     <script src="js/bootstrap.min.js"></script>
     <!-- All Plugins -->
-    <script src="js/alime.bundle.js"></script>
+    <script src="js/Madison.bundle.js"></script>
     <!-- Active -->
     <script src="js/default-assets/active.js"></script>
 
