--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <!-- Classy Menu -->
-                    <nav class="classy-navbar justify-content-between" id="MadisonNav">
+                    <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
                         <a class="nav-brand" href="./index.html"><img src="" alt=""></a>
@@ -71,9 +71,9 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li class="active"><a href="./index.html">Home</a></li>
-                            
+
                                     <li><a href="./gallery.html">Gallery</a></li>
-                                    
+
                                 </ul>
 
                                 <!-- Search Icon -->
@@ -118,7 +118,7 @@
                             <div class="welcome-text">
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm Madison </h2>
                                 <p data-animation="bounceInUp" data-delay="500ms">This is the first time I've ever made the decision to display my art publicy and I'm really excited to be here! While I'm a passionate creator, I've yet to find my niche. I believe that you have to stand one-hundred percent behind yourself and trust in your abiliies, leave room for mistakes, and seek opportunity to grow. As I continue to feel out what works best for me, I hope I inspire you.</p>
-                                <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">                                    
+                                <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
                                     <a class="hero-mail-contact" href="madisonjhurm@gmail.com">madisonjhurm@gmail.com</a>
                                 </div>
                             </div>
@@ -131,12 +131,12 @@
     <!-- Welcome Area End -->
 
     <!-- Gallery Area Start -->
-    <div class="Madison-portfolio-area section-padding-80 clearfix">
+    <div class="alime-portfolio-area section-padding-80 clearfix">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <!-- Projects Menu -->
-                    <div class="Madison-projects-menu">
+                    <div class="alime-projects-menu">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">1</button>
                             <button class="btn" data-filter=".human">2</button>
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="row Madison-portfolio">
+            <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
@@ -331,7 +331,7 @@
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"> Bacadlo</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                        </div> 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -348,7 +348,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- Bootstrap -->
     <script src="js/bootstrap.min.js"></script>
     <!-- All Plugins -->
-    <script src="js/Madison.bundle.js"></script>
+    <script src="js/alime.bundle.js"></script>
     <!-- Active -->
     <script src="js/default-assets/active.js"></script>
 
