--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Hello <br>I'm Madison </h2>
                                 <p data-animation="bounceInDown" data-delay="500ms">I'm new here! Please follow me on my journey to finding out what makes me the artist I desire to be! </p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
-                                    <a class="hero-mail-contact" href="madisonjhurm@gmail.com">madisonjhurm@gmail.com</a>
+                                    <a class="hero-mail-contact" >madisonjhurm@gmail.com</a>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hello <br>I'm Madison </h2>
                                 <p data-animation="bounceInUp" data-delay="500ms">This is the first time I've ever made the decision to display my art publicy and I'm really excited to be here! While I'm a passionate creator, I've yet to find my niche. I believe that you have to stand one-hundred percent behind yourself and trust in your abiliies, leave room for mistakes, and seek opportunity to grow. As I continue to feel out what works best for me, I hope I inspire you.</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a class="hero-mail-contact" href="madisonjhurm@gmail.com">madisonjhurm@gmail.com</a>
+                                    <a class="hero-mail-contact" >madisonjhurm@gmail.com</a>
                                 </div>
                             </div>
                         </div>
