--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
                     
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
-                            <span class="navbarToggler"></span>
+                            <span class="navbarToggler"><span></span><span></span><span></span></span>
                         </div>
 
                         <!-- Menu -->
