--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <!-- Classy Menu -->
-                    <nav class="classy-navbar justify-content-between" id="alimeNav">
+                    <nav class="classy-navbar justify-content-between" id="MadisonNav">
 
                         <!-- Logo -->
                         <a class="nav-brand" href="./index.html"><img src="" alt=""></a>
@@ -131,12 +131,12 @@
     <!-- Welcome Area End -->
 
     <!-- Gallery Area Start -->
-    <div class="alime-portfolio-area section-padding-80 clearfix">
+    <div class="Madison-portfolio-area section-padding-80 clearfix">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <!-- Projects Menu -->
-                    <div class="alime-projects-menu">
+                    <div class="Madison-projects-menu">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">1</button>
                             <button class="btn" data-filter=".human">2</button>
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="row alime-portfolio">
+            <div class="row Madison-portfolio">
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
@@ -308,7 +308,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/16.jpg" alt="">yyy
+                <img src="img/bg-img/16.jpg" alt="">
             </div>
         </div>
     </section>
