--- a/gallery.html
+++ b/gallery.html
@@ -318,7 +318,7 @@
     <!-- Bootstrap -->
     <script src="js/bootstrap.min.js"></script>
     <!-- All Plugins -->
-    <script src="js/Madison.bundle.js"></script>
+    <script src="js/alime.bundle.js"></script>
     <!-- Active -->
     <script src="js/default-assets/active.js"></script>
 
