--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Madison Hurm</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="">
+    <link rel="icon" href="./img/core-img/favicon.png">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
