madison to alime

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <!-- Classy Menu -->
-                    <nav class="classy-navbar justify-content-between" id="MadisonNav">
+                    <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
                         <a class="nav-brand" href="./index.html"><img src="" alt=""></a>
@@ -71,7 +71,6 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li class="active"><a href="./index.html">Home</a></li>
-
                                     <li><a href="./gallery.html">Gallery</a></li>
 
                                 </ul>
@@ -131,12 +130,12 @@
     <!-- Welcome Area End -->
 
     <!-- Gallery Area Start -->
-    <div class="Madison-portfolio-area section-padding-80 clearfix">
+    <div class="alime-portfolio-area section-padding-80 clearfix">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <!-- Projects Menu -->
-                    <div class="Madison-projects-menu">
+                    <div class="alime-projects-menu">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">1</button>
                             <button class="btn" data-filter=".human">2</button>
@@ -148,7 +147,7 @@
                 </div>
             </div>
 
-            <div class="row Madison-portfolio">
+            <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
@@ -262,7 +261,7 @@
 
             <div class="row">
                 <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                    <a href="./gallery.html" class="btn Madison-btn btn-2 mt-15">View More</a>
+                    <a href="./gallery.html" class="btn alime-btn btn-2 mt-15">View More</a>
                 </div>
             </div>
         </div>
@@ -319,7 +318,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                    <a href="./gallery.html" class="btn Madison-btn btn-2 mt-15">View More</a>
+                    <a href="./gallery.html" class="btn alime-btn btn-2 mt-15">View More</a>
                 </div>
             </div>
 
