--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <title>Madison Hurm</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="">
+    <link rel="icon" href="./img/core-img/favicon.png">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -51,7 +51,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <!-- Classy Menu -->
-                    <nav class="classy-navbar justify-content-between" id="MadisonNav">
+                    <nav class="classy-navbar justify-content-between" id="alimeNav">
                     
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -94,12 +94,12 @@
     <!-- Breadcrumb Area End -->
 
     <!-- Gallery Area Start -->
-    <div class="Madison-portfolio-area section-padding-80 clearfix">
+    <div class="alime-portfolio-area section-padding-80 clearfix">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <!-- Projects Menu -->
-                    <div class="Madison-projects-menu wow fadeInUp" data-wow-delay="100ms">
+                    <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">1</button>
                             <button class="btn" data-filter=".human">2</button>
@@ -111,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="row Madison-portfolio">
+            <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
@@ -235,7 +235,7 @@
 
             <div class="row">
                 <div class="col-12 text-center wow fadeInUp" data-wow-delay="800ms">
-                    <a href="#" class="btn Madison-btn btn-2 mt-15">View More</a>
+                    <a href="#" class="btn alime-btn btn-2 mt-15">View More</a>
                 </div>
             </div>
         </div>
